--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
   <body>
     <div class="container">
       <div class="display">
-        <div class="display top"></div>
-        <div class="display bottom"></div>
+        <div class="top">
+            <span>9+4-1</span>
+        </div>
+        <div class="bottom">
+            <span>12</span></div>
       </div>
       <div class="buttons">
         <button class="btn func">AC</button>
