Add event listeners and add functionality

--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
-    <script src="./app.js" defers></script>
+    <script src="./app.js" defer></script>
     <title>Calculator</title>
   </head>
   <body>
     <div class="container">
       <div class="display">
         <div class="top">
-            <span>9+4-1</span>
+          <span id="disp1"></span>
         </div>
         <div class="bottom">
-            <span>12</span></div>
+          <span id="disp2"></span>
+        </div>
       </div>
       <div class="buttons">
         <button class="btn func">AC</button>
