--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>
       </div>
       <div class="buttons">
-        <button class="btn func">AC</button>
-        <button class="btn func">DEL</button>
+        <button class="btn func danger">AC</button>
+        <button class="btn func danger">DEL</button>
         <button class="btn func">%</button>
         <button class="btn op">÷</button>
         <button class="btn num">7</button>
